[gd_scene load_steps=11 format=3 uid="uid://b7rsad5y1w38s"]

[ext_resource type="Script" path="res://Scenes/Camp/Scripts/forge_menu.gd" id="1_5tl1t"]
[ext_resource type="PackedScene" uid="uid://c6gdoil0o70r1" path="res://Scenes/StorageUI/PartUI/part_button.tscn" id="2_a6guu"]
[ext_resource type="PackedScene" uid="uid://cytiu54cl8vi4" path="res://Scenes/StorageUI/EquipmentUI/equip_button.tscn" id="3_ovuc1"]
[ext_resource type="PackedScene" uid="uid://jvem2bsy5c0" path="res://Scenes/ui_backdrop.tscn" id="4_xr85d"]
[ext_resource type="LabelSettings" uid="uid://dw18pcv0wtiom" path="res://Themes/BodyLabel.tres" id="5_r3t7k"]
[ext_resource type="LabelSettings" uid="uid://cb4eflp81bok5" path="res://Themes/HeaderLabel.tres" id="6_p68io"]
[ext_resource type="PackedScene" uid="uid://ly2lqh5cyg56" path="res://Scenes/StorageUI/storage.tscn" id="7_uefke"]
[ext_resource type="PackedScene" uid="uid://dwc7qnmdrv0l5" path="res://Scenes/StorageUI/EquippedUI/equipped.tscn" id="9_60jb7"]
[ext_resource type="LabelSettings" uid="uid://b11e7oyd37eom" path="res://Themes/TitleLabel.tres" id="10_m4fe0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rnipj"]

[node name="ForgeMenu" type="Node2D"]
script = ExtResource("1_5tl1t")
partButScene = ExtResource("2_a6guu")
equipButScene = ExtResource("3_ovuc1")

[node name="Exit" type="Button" parent="."]
offset_left = -88.0
offset_top = -72.0
offset_right = 1991.0
offset_bottom = 1115.0
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_rnipj")
flat = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 251.0
offset_top = 119.0
offset_right = 1649.0
offset_bottom = 918.0

[node name="Main" type="Node2D" parent="."]
position = Vector2(250, 218)

[node name="UIbackdrop" parent="Main" instance=ExtResource("4_xr85d")]
layer_0/tile_data = PackedInt32Array(196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 262151, 0, 0, 262150, 0, 0, 262149, 0, 0, 262148, 0, 0, 196616, 0, 0, 262152, 0, 0, 262147, 0, 0, 262146, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 327689, 0, 0, 262153, 0, 0, 196617, 0, 0, 196620, 0, 0, 262155, 0, 0, 262156, 0, 0, 196621, 0, 0, 262157, 0, 0, 196619, 0, 0, 327692, 0, 0, 327691, 0, 0, 327688, 0, 0, 327687, 0, 0, 327686, 0, 0, 327685, 0, 0, 327684, 0, 0, 327683, 0, 0, 327682, 0, 0, 393218, 0, 0, 458755, 0, 0, 524291, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 0, 0, 589836, 0, 0, 589835, 0, 0, 589834, 0, 0, 589833, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 458764, 0, 0, 393228, 0, 0, 393227, 0, 0, 393226, 0, 0, 393225, 0, 0, 393224, 0, 0, 393223, 0, 0, 393222, 0, 0, 393221, 0, 0, 393220, 0, 0, 393219, 0, 0, 524292, 0, 0, 524293, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458757, 0, 0, 458756, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 458763, 0, 0, 851972, 131072, 805306368, 786436, 0, 0, 720900, 0, 0, 655365, 0, 0, 655370, 0, 0, 720906, 0, 0, 786442, 0, 0, 851977, 131072, 805306368, 851976, 131072, 805306368, 851975, 131072, 805306368, 851974, 131072, 805306368, 786437, 0, 0, 655368, 0, 0, 720903, 0, 0, 786438, 0, 0, 655364, 0, 0, 720901, 0, 0, 655367, 0, 0, 720902, 0, 0, 655366, 0, 0, 851973, 131072, 805306368, 786439, 0, 0, 720904, 0, 0, 720905, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 786443, 0, 0, 786441, 0, 0, 589842, 0, 0, 524306, 0, 0, 458770, 0, 0, 393234, 0, 0, 327698, 0, 0, 262162, 0, 0, 196626, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 655373, 0, 0, 655372, 0, 0, 655371, 0, 0, 720910, 0, 0, 786446, 0, 0, 786445, 0, 0, 786444, 0, 0, 851980, 131072, 805306368, 851979, 131072, 805306368, 851978, 131072, 805306368, 851981, 131072, 805306368, 851982, 131072, 805306368, 851983, 131072, 805306368, 786447, 0, 0, 720911, 0, 0, 655375, 0, 0, 589839, 0, 0, 524303, 0, 0, 458767, 0, 0, 393231, 0, 0, 327695, 0, 0, 262159, 0, 0, 196623, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 524304, 0, 0, 589840, 0, 0, 655376, 0, 0, 720912, 0, 0, 786448, 0, 0, 851984, 131072, 805306368, 851985, 131072, 805306368, 786449, 0, 0, 720913, 0, 0, 655377, 0, 0, 589841, 0, 0, 524305, 0, 0, 458769, 0, 0, 393233, 0, 0, 327697, 0, 0, 262161, 0, 0, 196625, 0, 0, 655378, 0, 0, 720914, 0, 0, 786450, 0, 0, 851986, 131072, 805306368, 851987, 131072, 805306368, 786451, 0, 0, 720915, 0, 0, 655379, 0, 0, 589843, 0, 0, 524307, 0, 0, 458771, 0, 0, 393235, 0, 0, 327699, 0, 0, 262163, 0, 0, 196627, 0, 0, 196628, 0, 0, 262164, 0, 0, 327700, 0, 0, 393236, 0, 0, 458772, 0, 0, 524308, 0, 0, 589844, 0, 0, 655380, 0, 0, 720916, 0, 0, 786452, 0, 0, 851988, 131072, 805306368, 851989, 131072, 805306368, 786453, 0, 0, 720917, 0, 0, 655381, 0, 0, 589845, 0, 0, 524309, 0, 0, 458773, 0, 0, 393237, 0, 0, 327701, 0, 0, 262165, 0, 0, 196629, 0, 0, 196630, 0, 0, 262166, 0, 0, 327702, 0, 0, 393238, 0, 0, 458774, 0, 0, 524310, 0, 0, 589846, 0, 0, 655382, 0, 0, 720918, 0, 0, 786454, 0, 0, 851990, 131072, 805306368, 851991, 131072, 805306368, 786455, 0, 0, 720919, 0, 0, 655383, 0, 0, 589847, 0, 0, 524311, 0, 0, 458775, 0, 0, 393239, 0, 0, 327703, 0, 0, 262167, 0, 0, 196631, 0, 0, 196632, 0, 0, 262168, 0, 0, 327704, 0, 0, 393240, 0, 0, 458776, 0, 0, 524312, 0, 0, 589848, 0, 0, 655384, 0, 0, 720920, 0, 0, 786456, 0, 0, 851992, 131072, 805306368, 851993, 131072, 805306368, 786457, 0, 0, 720921, 0, 0, 655385, 0, 0, 589849, 0, 0, 524313, 0, 0, 458777, 0, 0, 393241, 0, 0, 327705, 0, 0, 262169, 0, 0, 196633, 0, 0, 196634, 0, 0, 262170, 0, 0, 327706, 0, 0, 393242, 0, 0, 458778, 0, 0, 524314, 0, 0, 589850, 0, 0, 655386, 0, 0, 720922, 0, 0, 786458, 0, 0, 851994, 131072, 805306368, 851995, 131072, 805306368, 786459, 0, 0, 720923, 0, 0, 655387, 0, 0, 589851, 0, 0, 524315, 0, 0, 458779, 0, 0, 393243, 0, 0, 327707, 0, 0, 262171, 0, 0, 196635, 0, 0, 786440, 0, 0, 655369, 0, 0, 655363, 0, 0, 720899, 0, 0, 786435, 0, 0, 786434, 0, 0, 720898, 0, 0, 851970, 131072, 805306368, 655362, 0, 0, 851971, 131072, 805306368, 131099, 0, 0, 131098, 0, 0, 131097, 0, 0, 131096, 0, 0, 131095, 0, 0, 131094, 0, 0, 131093, 0, 0, 131092, 0, 0, 131091, 0, 0, 131090, 0, 0, 131089, 0, 0, 131088, 0, 0, 131087, 0, 0, 131086, 0, 0, 131085, 0, 0, 131084, 0, 0, 131083, 0, 0, 131082, 0, 0, 131081, 0, 0, 131080, 0, 0, 131079, 0, 0, 131078, 0, 0, 131077, 0, 0, 131076, 0, 0, 131075, 0, 0, 131074, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65547, 0, 0, 65546, 0, 0, 65545, 0, 0, 65544, 0, 0, 65548, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 196608, 805306368, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 131072, 805306368, -131072, 131072, 0, -131071, 131072, 0, -131070, 131072, 0, -131069, 131072, 0, -131068, 131072, 0, -131067, 131072, 0, -131066, 131072, 0, -131065, 131072, 0, -131064, 131072, 0, -131063, 131072, 0, -131062, 131072, 0, -131061, 131072, 0, -131060, 131072, 0, -131059, 131072, 0, -131058, 131072, 0, -131057, 131072, 0, -131056, 131072, 0, -131055, 131072, 0, -131054, 131072, 0, -131053, 131072, 0, -131052, 131072, 0, -131051, 131072, 0, -131050, 131072, 0, -131049, 131072, 0, -131048, 131072, 0, -131047, 131072, 0, -131046, 131072, 0, -131045, 196608, 0, -65536, 0, 0, 0, 0, 0, -65535, 0, 0, 1, 0, 0, -65534, 0, 0, 2, 0, 0, -65533, 0, 0, 3, 0, 0, -65532, 0, 0, 4, 0, 0, -65531, 0, 0, 5, 0, 0, -65530, 0, 0, 6, 0, 0, -65529, 0, 0, 7, 0, 0, -65528, 0, 0, 8, 0, 0, -65527, 0, 0, 9, 0, 0, -65526, 0, 0, 10, 0, 0, -65525, 0, 0, 11, 0, 0, -65524, 0, 0, 12, 0, 0, -65523, 0, 0, 13, 0, 0, -65522, 0, 0, 14, 0, 0, -65521, 0, 0, 15, 0, 0, -65520, 0, 0, 16, 0, 0, -65519, 0, 0, 17, 0, 0, -65518, 0, 0, 18, 0, 0, -65517, 0, 0, 19, 0, 0, -65516, 0, 0, 20, 0, 0, -65515, 0, 0, 21, 0, 0, -65514, 0, 0, 22, 0, 0, -65513, 0, 0, 23, 0, 0, -65512, 0, 0, 24, 0, 0, -65511, 0, 0, 25, 0, 0, -65510, 0, 0, 26, 0, 0, -65509, 0, 0, 27, 0, 0, -65537, 65536, 0, 851996, 65536, 805306368)

[node name="ActiveBlueprint" type="Node2D" parent="Main"]
position = Vector2(785, 42)

[node name="SelectedParts" type="Node2D" parent="Main/ActiveBlueprint"]
position = Vector2(191, 116)

[node name="EquipStat" type="Label" parent="Main/ActiveBlueprint"]
offset_left = 321.0
offset_top = 373.0
offset_right = 859.0
offset_bottom = 602.0
label_settings = ExtResource("5_r3t7k")

[node name="Type" type="Label" parent="Main/ActiveBlueprint"]
offset_left = 189.0
offset_top = 37.0
offset_right = 548.0
offset_bottom = 135.0
label_settings = ExtResource("6_p68io")
horizontal_alignment = 1

[node name="PartType" type="Label" parent="Main/ActiveBlueprint"]
visible = false
offset_left = 28.0
offset_top = 140.0
offset_right = 159.0
offset_bottom = 311.0
text = "Required


Optional"
label_settings = ExtResource("5_r3t7k")

[node name="Storage" parent="Main" instance=ExtResource("7_uefke")]
position = Vector2(445, 24)

[node name="Equipped" parent="Main" instance=ExtResource("9_60jb7")]
position = Vector2(48, 75)

[node name="Label" type="Label" parent="Main"]
offset_top = -66.0
offset_right = 1400.0
offset_bottom = 71.0
text = "Forge"
label_settings = ExtResource("10_m4fe0")
horizontal_alignment = 1

[connection signal="button_down" from="Exit" to="." method="_on_exit_button_down"]
[connection signal="use" from="Main/Storage" to="." method="_on_storage_use"]
[connection signal="use_equip" from="Main/Storage" to="." method="_on_storage_use_equip"]
[connection signal="pressed_equip" from="Main/Equipped" to="." method="clicked_equipment"]
